Document the demo app a little

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
 <body>
   <h1>Gecko Bootloader Web Bluetooth OTA</h1>
+  <p>
+    Demo application demonstrating Over-The-Air (OTA) firmware updates for Gecko Bootloader devices using the <a
+      href="https://developer.mozilla.org/en-US/docs/Web/API/Web_Bluetooth_API">Web Bluetooth API</a>.
+  </p>
+  <p>
+    Implemented using the
+    <code><a href="https://github.com/loopj/gbl-tools/blob/main/src/GeckoBootloaderClient.js">GeckoBootloaderClient</a></code>
+    from <a href="https://github.com/loopj/gbl-tools">loopj/gbl-tools</a>
+  </p>
 
   <div id="connect">
     <h2>Step 1: Connect to Device</h2>
